Closed
Bug 1310794
Opened 7 years ago
Closed 7 years ago
implement aria-details and aria-errormessage
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla52
Tracking | Status | |
---|---|---|
firefox52 | --- | fixed |
People
(Reporter: surkov, Assigned: surkov)
References
(Depends on 1 open bug, Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
14.45 KB,
patch
|
davidb
:
review+
|
Details | Diff | Splinter Review |
https://www.w3.org/TR/wai-aria-1.1/#aria-errormessage https://www.w3.org/TR/wai-aria-1.1/#aria-details
Assignee | ||
Comment 1•7 years ago
|
||
Attachment #8801846 -
Flags: review?(dbolter)
Assignee | ||
Comment 2•7 years ago
|
||
Assignee: nobody → surkov.alexander
Attachment #8801846 -
Attachment is obsolete: true
Attachment #8801846 -
Flags: review?(dbolter)
Attachment #8801847 -
Flags: review?(dbolter)
Comment 3•7 years ago
|
||
Comment on attachment 8801847 [details] [diff] [review] patch Review of attachment 8801847 [details] [diff] [review]: ----------------------------------------------------------------- r=me. Please give me a heads up if you have other ARIA impl plans -- especially while we are laser focused on multiprocess. ::: accessible/tests/mochitest/relations/test_general.html @@ +400,5 @@ > <input /> > </fieldset> > + > + <input id="has_details" aria-details="details"><section id="details"></section> > + <input id="has_error" aria-errormessage="error"><section id="error"></section> Curious why you chose inputs...
Attachment #8801847 -
Flags: review?(dbolter) → review+
Assignee | ||
Comment 4•7 years ago
|
||
(In reply to David Bolter [:davidb] from comment #3) > r=me. Please give me a heads up if you have other ARIA impl plans -- Nothing else so far, that's the only thing we sorted out with Rich, Jamie and others on IA2 mail list. > especially while we are laser focused on multiprocess. This shouldn't cross multiprocess plans by any means, these attributes are fairly new and neither of them used on the web yet. I would say it's a low risk. > > + <input id="has_details" aria-details="details"><section id="details"></section> > > + <input id="has_error" aria-errormessage="error"><section id="error"></section> > > Curious why you chose inputs... just something accessible, what may have details or error message provided
Assignee | ||
Comment 5•7 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=698a6da10dd3
Assignee | ||
Comment 6•7 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=359128c06345
Assignee | ||
Comment 7•7 years ago
|
||
Windows doesn't like RelationType::ERROR constant: 6:56.30 Unified_cpp_accessible_xpcom0.cpp 6:56.30 accessible_xpcom.lib.desc 6:56.30 COMPtrTypes.cpp 6:56.30 c:\mozilla\inbound\obj-i686-pc-mingw32\dist\include\mozilla/a11y/RelationType.h(130): error C2059: syntax error: 'constant' 6:56.30 c:\mozilla\inbound\obj-i686-pc-mingw32\dist\include\mozilla/a11y/RelationType.h(130): error C3805: 'constant': unexpected token, expected either '}' or a ',' So suggesting to rename it to ERRORMSG (ERRORMSG_FOR) which is closer to ARIA, but further from IA2.
Assignee | ||
Comment 8•7 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=8de847e619dd
Assignee | ||
Comment 9•7 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=6c3a589e8af7
Assignee | ||
Comment 10•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/22dd21caab66dd9c0504c6b984a096639f916e5a Bug 1310794 - implement aria-details and aria-errormessage, r=davidb
Comment 11•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/22dd21caab66
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•