Bug 1310794 - implement aria-details and aria-errormessage, r=davidb